--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -12,10 +12,17 @@
 #room header .buttons {
     display: flex;
     font-family: 'Poppins', sans-serif;
+    align-items: center;
+    justify-content: center;
+}
+
+#room header .buttons .toggle{
+    margin-left: 1rem;
+
 }
 
 #room header .buttons .button:nth-child(1) {
-    margin-right: .8rem;
+    margin-right: 1rem;
     padding: 1.3rem 1.6rem
 }
 
