--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -15,12 +15,13 @@
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap"
+        rel="stylesheet">
 
     <!-- SCRIPTS -->
     <script src="/scripts/main.js" defer type="module"></script>
-    <script src="/scripts/dark.js" defer type="module"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="/scripts/dark.js"></script>
+
 
 </head>
 
@@ -30,8 +31,8 @@
             <a href="/">
                 <img src="/images/Logo.svg" alt="Rocket.Q Logo" class="logo" id="logo" />
             </a>
-            <div class="buttons">
 
+            <div class="buttons">
                 <div class="button outlined" id="room-id" data-id="<%= roomId %>">
                     #
                     <%= roomId %>
@@ -40,19 +41,21 @@
                 <a href="/create-pass" class="button">
                     <img id="img-button" src="/images/users-white.svg" alt="Criar uma sala"> Criar Sala
                 </a>
+                <div class="toggle">
+                    <input id="switch" type="checkbox" name="theme" onclick="darkMode()">
+                    <label id="toggle" for="switch">Toggle</label>
+                </div>
             </div>
+
         </header>
-        <div class="toggle">
-            <input id="switch" type="checkbox" name="theme" onclick="darkMode()">
-            <label id="toggle" for="switch">Toggle</label>
-        </div>
 
         <main>
             <section id="question-form">
                 <h2>Faça sua pergunta</h2>
                 <form action="/question/create/<%= roomId %>" method="POST">
                     <label class="sr-only" for-id="question">O que você quer perguntar?</label>
-                    <textarea required name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
+                    <textarea required name="question" id="question"
+                        placeholder="O que você quer perguntar?"></textarea>
 
                     <footer>
                         <div>
@@ -84,9 +87,11 @@
                                             </div>
                                         </div>
                                         <div class="actions">
-                                            <a class="check" href="#" data-id="<%= question.id %>"><img src="/images/check.svg" alt="Marcar como lida">Marcar como lida
+                                            <a class="check" href="#" data-id="<%= question.id %>"><img
+                                                    src="/images/check.svg" alt="Marcar como lida">Marcar como lida
                                             </a>
-                                            <a class="delete" href="#" data-id="<%= question.id %>"><img src="/images/trash.svg" alt="Excluir">Excluir</a>
+                                            <a class="delete" href="#" data-id="<%= question.id %>"><img
+                                                    src="/images/trash.svg" alt="Excluir">Excluir</a>
                                         </div>
                                     </div>
                                     <% }) %>
@@ -104,7 +109,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="actions">
-                                                    <a class="delete" href="#" data-id="<%= questionRead.id %>"><img src="/images/trash.svg" alt="Excluir">Excluir</a>
+                                                    <a class="delete" href="#" data-id="<%= questionRead.id %>"><img
+                                                            src="/images/trash.svg" alt="Excluir">Excluir</a>
                                                 </div>
                                             </div>
                                             <% }) %>
